# ghr

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/api/: call_request.rs
src/general/: command_line.rs  mod.rs  process_res.rs
src/models/: command_line.rs  llm.rs  mod.rs
