[package]
name = "ghr"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"

